# wrnotifier

./: .gitignore  Cargo.toml  README.md
api/: fetch.go  register.go  unregister.go
middleware/: auth.go
server/: server.go
src/: app.rs  constants.rs  database.rs  main.rs  models.rs  util.rs  worker.rs
src/server/: handle.rs  mod.rs  rejections.rs
src/server/routes/: index.rs  mod.rs  register.rs  unregister.rs  webhooks.rs
structures/: discord_embed.go  exposable_webhook.go  response_data.go  target_webhook.go  webhook.go
utils/: get_webhook_index.go
worker/: worker.go
