[package]
name = "wrnotifier"
version = "0.1.0"
edition = "2018"


[dependencies]
tokio = { version = "1.8.0", features = ["full"] }
warp = "0.3"
lazy_static = "1.4.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0.126", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
